Updated description on guaranteed ER yaml

--- a/guaranteedEntranceRando.yml
+++ b/guaranteedEntranceRando.yml
@@ -1,4 +1,4 @@
-description: Default
+description: Guaranteed simple entrance shuffle, all other settings identical to default Jim.yml
 name: Jim
 glitches_required:
   none: 50
