--- a/Jim.yaml
+++ b/Jim.yaml
@@ -1,12 +1,12 @@
 description: Default
 name: Jim
 glitches_required:
-  none: 50
+  none: 100
   minor_glitches: 0
   overworld_glitches: 0
   no_logic: 0
 dark_room_logic:
-  lamp: 50
+  lamp: 100
   torches: 0
   none: 0
 restrict_dungeon_item_on_boss:
@@ -26,15 +26,15 @@ compass_shuffle:
   on: 0
   off: 50
 smallkey_shuffle:
-  on: 0
-  universal: 0
-  off: 50
+  on: 10
+  universal: 5
+  off: 85
 bigkey_shuffle:
-  on: 0
-  off: 50
+  on: 5
+  off: 95
 local_keys:
   on: 0
-  off: 50
+  off: 100
 dungeon_items:
   mc: 0
   none: 50
@@ -42,16 +42,16 @@ dungeon_items:
   lmcsb: 0
   ub: 0
 dungeon_counters:
-  on: 50
-  pickup: 50
+  on: 100
+  pickup: 00
   default: 0
   off: 0
 accessibility:
   items: 0
-  locations: 50
+  locations: 100
   none: 0
 progressive:
-  on: 50
+  on: 100
   off: 0
   random: 0
 entrance_shuffle:
@@ -67,22 +67,22 @@ goals:
   ganon: 5
   fast_ganon: 20
   dungeons: 0
-  pedestal: 15
+  pedestal: 20
   ganon_pedestal: 0
-  triforce_hunt: 35
+  triforce_hunt: 40
   local_triforce_hunt: 10
   ganon_triforce_hunt: 0
   local_ganon_triforce_hunt: 0
-  ice_rod_hunt: 15
+  ice_rod_hunt: 5
 triforce_pieces_mode:
   extra: 100
   percentage: 0
   available: 0
 triforce_pieces_extra:
   0: 0
-  5: 0
-  10: 100
-  15: 0
+  5: 10
+  10: 80
+  15: 10
   20: 0
 triforce_pieces_percentage:
   100: 0
@@ -95,39 +95,39 @@ triforce_pieces_available:
   50: 0
 triforce_pieces_required:
   15: 5
-  20: 94
-  30: 1
+  20: 80
+  30: 15
   40: 0
   50: 0
 tower_open:
-  0: 20
-  1: 20
+  0: 35
+  1: 24
   2: 20
-  3: 20
-  4: 20
-  5: 0
-  6: 0
-  7: 0
+  3: 10
+  4: 5
+  5: 3
+  6: 2
+  7: 1
   random: 0
 ganon_open:
-  0: 20
-  1: 20
+  0: 35
+  1: 24
   2: 20
-  3: 20
-  4: 20
-  5: 0
-  6: 0
-  7: 0
+  3: 10
+  4: 5
+  5: 3
+  6: 2
+  7: 1
   random: 0
 mode:
-  standard: 50
-  open: 50
-  inverted: 0
+  standard: 40
+  open: 40
+  inverted: 20
 retro:
   on: 0
-  off: 50
+  off: 100
 hints:
-  on: 50
+  on: 100
   off: 0
 weapons:
   randomized: 0
@@ -136,7 +136,7 @@ weapons:
   swordless: 0
 item_pool:
   easy: 0
-  normal: 50
+  normal: 100
   hard: 0
   expert: 0
 item_functionality:
@@ -145,11 +145,11 @@ item_functionality:
   hard: 0
   expert: 0
 progression_balancing:
-  on: 50
+  on: 100
   off: 0
 tile_shuffle:
   on: 0
-  off: 50
+  off: 100
 misery_mire_medallion:
   random: 50
   ether: 0
@@ -170,25 +170,25 @@ enemy_shuffle:
   on: 0
   off: 50
 killable_thieves:
-  on: 50
-  off: 50
+  on: 100
+  off: 0
 bush_shuffle:
   on: 0
-  off: 50
+  off: 100
 enemy_damage:
-  default: 50
+  default: 100
   shuffled: 0
   random: 0
 enemy_health:
-  default: 50
+  default: 100
   easy: 0
   hard: 0
   expert: 0
 pot_shuffle:
   on: 0
-  off: 50
+  off: 100
 beemizer:
-  0: 50
+  0: 100
   1: 0
   2: 0
   3: 0
@@ -196,10 +196,10 @@ beemizer:
 shop_shuffle_slots:
   0: 65
   5: 0
-  15: 15
-  30: 20
+  15: 0
+  30: 35
 shop_shuffle:
-  none: 50
+  none: 100
   i: 0
   p: 0
   u: 0
@@ -207,11 +207,11 @@ shop_shuffle:
   uip: 0
 shuffle_prizes:
   none: 0
-  g: 50
+  g: 100
   b: 0
   bg: 0
 timer:
-  none: 50
+  none: 100
   timed: 0
   timed_ohko: 0
   ohko: 0
@@ -219,22 +219,22 @@ timer:
   display: 0
 countdown_start_time:
   0: 0
-  10: 50
+  10: 100
   20: 0
   30: 0
   60: 0
 red_clock_time:
   1: 0
-  '-2': 50
+  '-2': 100
 blue_clock_time:
   1: 0
-  2: 50
+  2: 100
 green_clock_time:
-  4: 50
+  4: 100
   10: 0
   15: 0
 glitch_boots:
-  on: 50
+  on: 100
   off: 0
 linked_options:
   - name: crosskeys
@@ -321,6 +321,14 @@ rom:
   quickswap:
     on: 50
     off: 0
+  triforcehud:
+    normal: 0
+    hide_goal: 50
+    hide_required: 0
+    hide_both: 0
+  reduceflashing:
+    on: 50
+    off: 0
   menuspeed:
     normal: 50
     instant: 0
@@ -341,22 +349,22 @@ rom:
     quarter: 100
     off: 0
   ow_palettes:
-    default: 50
+    default: 80
     random: 0
     blackout: 0
-    grayscale: 0
+    grayscale: 10
     negative: 0
-    classic: 0
+    classic: 10
     dizzy: 0
     sick: 0
     puke: 0
   uw_palettes:
-    default: 50
+    default: 80
     random: 0
     blackout: 0
-    grayscale: 0
+    grayscale: 10
     negative: 0
-    classic: 0
+    classic: 10
     dizzy: 0
     sick: 0
     puke: 0
